Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-24312

Flicking a pathview with large delegate spacing produces inconsistent flicks

XMLWordPrintable

    • b672f1974d3291cd0ad56c3c54f5398accc392b8

      The deceleration of the example is inconsistent. Also, dragging slowly is jerky.

        1. inconsistentPathViewFlick.qml
          1 kB
          Martin Jones (closed Nokia identity)
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            martjone Martin Jones (closed Nokia identity) (Inactive)
            martjone Martin Jones (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes