Flicking a pathview with large delegate spacing is inconsistent

The deceleration is inconsistent and dragging slowly is jerky.
This was largely due to the poor resolution of the path points.
pointAt() now interpolates, and the dragging logic is more
accurate.  Also removed the rounding of item positioning so
that side-by-side items don't bounce around.

Task-number: QTBUG-24312
Change-Id: I956aff0b83c3c1211d5657159c3de1e4ef0b5171
Reviewed-by: Alan Alpert <alan.alpert@nokia.com>